changes to home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -84,7 +84,7 @@
 	<br>
 	<div class="mainTitle">
   <p>
-    "Living more sustainable isn't a happy thing.It's a survival thing."
+    "Living more sustainable isn't a hippie thing.It's a survival thing."
   </p>
   <a href="/friendly" class="abc btn btn-success">Check for eco-friendly products</a>
   </div>
