made some style changes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,106 +1,109 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Login</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-  <link rel="stylesheet" type="text/css" href="/stylesheets/allpgs.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/darkmode.css">
+    <title>Login</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/allpgs.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/darkmode.css">
 </head>
+
 <body>
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-	<div class="container">
-      <a class="navbar-brand" href="#">Sustainability</a>
-  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-				controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Echohay</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria- controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
 
-  		<div class="collapse navbar-collapse" id="navbarSupportedContent1">
-    	<ul class="navbar-nav mr-auto">
-    	  
-    	  
-     	 <li class="nav-item">
-     	   <a class="nav-link" href="/">Home</a>
-     	 </li>
-			
-      <li class="nav-item">
-         <a class="nav-link" href="/friendly">Products</a>
-       </li>
-		
-     	</ul>
-    	<form class="form-inline my-2 my-lg-0">
-      	<ul class="navbar-nav mr-auto">
-      			<% if(!currentUser){ %>
-				<li class="nav-item">
-        			<a class="nav-link" href="/signup"><span><i class="fas fa-user-plus"></i></span> Sign Up</a>
-      			</li>
-      			<li class="nav-item">
-        			<a class="nav-link active" href="/login" active><span><i class="fas fa-user"></i></span> Login</a>
-      			</li>
-			<%}
-      		else{%>
-            <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%=currentUser.username %>
-            </a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+                <ul class="navbar-nav mr-auto">
 
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="/userinfo/<%=currentUser._id%>">Profile</a>
-              <a class="dropdown-item" href="/logout"> Logout</a>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/friendly">Products</a>
+                    </li>
+
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <ul class="navbar-nav mr-auto">
+                        <% if(!currentUser){ %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/signup"><span><i class="fas fa-user-plus"></i></span> Sign Up</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="/login" active><span><i class="fas fa-user"></i></span> Login</a>
+                            </li>
+                            <%}
+      		else{%>
+                                <div class="dropdown">
+                                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <%=currentUser.username %>
+                                    </a>
+
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                        <a class="dropdown-item" href="/userinfo/<%=currentUser._id%>">Profile</a>
+                                        <a class="dropdown-item" href="/logout"> Logout</a>
+                                    </div>
+                                </div>
+                                <%}%>
+                                    <li class="nav-item">
+                                        <a class="nav-link active dark-mode-toggle" id="dark-mode-toggle" href="#">Toggle mode</a>
+                                    </li>
+                    </ul>
+                </form>
             </div>
         </div>
-			<%}%>
-				<li class="nav-item">
-    	    		<a class="nav-link active dark-mode-toggle" id="dark-mode-toggle" href="#">Toggle mode</a>
-    	  		</li>
-     	</ul>
-    	</form>
-  		</div>
-	</div>
-</nav><br>
+    </nav><br>
 
-<div class="container">
-	<div class="container">
-		<% if(error && error.length>0){%>
-			<div class="alert alert-danger" role="alert">
-				<%=error%>
-			</div>
-		<%}
+    <div class="container">
+        <div class="container">
+            <% if(error && error.length>0){%>
+                <div class="alert alert-danger" role="alert">
+                    <%=error%>
+                </div>
+                <%}
 		if(success && success.length>0){%>
-			<div class="alert alert-success" role="alert">
-				<%=success%>
-			</div>
-		<%}
+                    <div class="alert alert-success" role="alert">
+                        <%=success%>
+                    </div>
+                    <%}
 		if(info && info.length>0){%>
-			<div class="alert alert-info" role="alert">
-				<%=info%>
-			</div>
-		<%}%>
-	</div>
-	<br>
-	<h1>Login</h1>
-	<form action="/login"  method="POST">
-  		<div class="form-group" >
-    		<label for="username">Username</label>
-    		<input type="text" name="username" class="form-control" id="username" placeholder="username">
-  		</div>
-  		<div class="form-group">
-    		<label for="password">Password</label>
-    		<input type="password" name="password" class="form-control" id="password" placeholder="password">
-  		</div>
-  		<button type="submit" class="btn btn-primary btn-lg">Login</button>
-	</form>
-<br>
-<p>Do not have a account 
-	<a href="/signup" class="btn btn-secondary btn-lg">Sign Up</a>
-</p>
-</div>
-<script type="text/javascript" src="/scripts/abcd.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+                        <div class="alert alert-info" role="alert">
+                            <%=info%>
+                        </div>
+                        <%}%>
+        </div>
+        <br>
+        <h1>Login</h1>
+        <form action="/login" method="POST">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" name="username" class="form-control" id="username" placeholder="username">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" name="password" class="form-control" id="password" placeholder="password">
+            </div>
+            <button type="submit" class="btn btn-primary btn-lg">Login</button>
+        </form>
+        <br>
+        <p>Do not have a account
+            <a href="/signup" class="btn btn-secondary btn-lg">Sign Up</a>
+        </p>
+    </div>
+    <script type="text/javascript" src="/scripts/abcd.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+
 </html>
