--- a/public/stylesheets/friendly.css
+++ b/public/stylesheets/friendly.css
@@ -1,10 +1,17 @@
 #thumb {
-	width:345px;
-	height:345px;
+    width: 345px;
+    height: 345px;
 }
+
 #thumb img {
-	height:100%;
-	width:100%;
-	margin:0 auto;
-	padding-top:20px;
+    height: 90%;
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 20px;
+}
+
+.img-thumbnail {
+    margin: 5px;
+    width: 380px;
+    height: 450px;
 }
