--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,98 +1,101 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
-	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-  <link rel="stylesheet" type="text/css" href="stylesheets/allpgs.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/darkmode.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/userinfo.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-		<link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
+    <title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/darkmode.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/userinfo.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/allpgs.css">
 </head>
+
 <body>
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-	<div class="container">
-		<a class="navbar-brand" href="#">Sustainability</a>
-  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Echohay</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
 
-  		<div class="collapse navbar-collapse" id="navbarSupportedContent1">
-    	<ul class="navbar-nav mr-auto">
-    	  
-    	  
-     	 <li class="nav-item">
-     	   <a class="nav-link" href="/">Home</a>
-     	 </li>
-			
-      <li class="nav-item">
-         <a class="nav-link" href="/friendly">Products</a>
-       </li>
-		
-     	</ul>
-    	<form class="form-inline my-2 my-lg-0">
-      	<ul class="navbar-nav mr-auto">
-      			<% if(!currentUser){ %>
-				<li class="nav-item">
-        			<a class="nav-link" href="/signup"><span><i class="fas fa-user-plus"></i></span> Sign Up</a>
-      			</li>
-      			<li class="nav-item">
-        			<a class="nav-link active" href="/login"><span><i class="fas fa-user"></i></span> Login</a>
-      			</li>
-			<%}
-      		else{%>
-      			<div class="dropdown">
-  					<a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    					<%=currentUser.username %>
-  					</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+                <ul class="navbar-nav mr-auto">
 
-  					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    					<a class="dropdown-item" href="/userinfo/<%=currentUser._id%>">Profile</a>
-    					<a class="dropdown-item" href="/logout"> Logout</a>
-  					</div>
-				</div>
-			<%}%>
-				<li class="nav-item">
-    	    		<a class="nav-link active dark-mode-toggle" id="dark-mode-toggle" href="#">Toggle mode</a>
-    	  		</li>
-     	</ul>
-    	</form>
-  		</div>
-	</div>
-</nav><br>
-	<div class="ui main text container segment">
-			<div class="ui huge header">
-		         Edit <%=item.title %>
-	        </div>
-		<form class="ui form" action="/friendly/<%= item._id %>?_method=PUT" method="POST">
-			<div class="field">
-				<label>Product name</label>
-				<input type="text" name="title" value="<%= item.title %>">
-			</div>
-			<div class="field" style="display: none;">
-				<label>Image</label>
-				<input type="text" name="image" value="<%= item.image %>" >
-			</div>
-			<div class="field">
-				<label>Cost in rupees</label>
-				<input type="text" name="cost" value="<%=item.cost%>" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))" />
-			</div>
-			<div class="field">
-				<label>Shop Name</label>
-				<input type="text" name="item[shop]" value="<%= item.shop %>">
-			</div>
-			
-				<input class="ui violet big basic button" type="submit">
-		</form>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/friendly">Products</a>
+                    </li>
+
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <ul class="navbar-nav mr-auto">
+                        <% if(!currentUser){ %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/signup"><span><i class="fas fa-user-plus"></i></span> Sign Up</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="/login"><span><i class="fas fa-user"></i></span> Login</a>
+                            </li>
+                            <%}
+      		else{%>
+                                <div class="dropdown">
+                                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <%=currentUser.username %>
+                                    </a>
+
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                        <a class="dropdown-item" href="/userinfo/<%=currentUser._id%>">Profile</a>
+                                        <a class="dropdown-item" href="/logout"> Logout</a>
+                                    </div>
+                                </div>
+                                <%}%>
+                                    <li class="nav-item">
+                                        <a class="nav-link active dark-mode-toggle" id="dark-mode-toggle" href="#">Toggle mode</a>
+                                    </li>
+                    </ul>
+                </form>
+            </div>
+        </div>
+    </nav><br>
+    <div class="ui main text container segment">
+        <div class="ui huge header">
+            Edit
+            <%=item.title %>
+        </div>
+        <form class="ui form" action="/friendly/<%= item._id %>?_method=PUT" method="POST">
+            <div class="field">
+                <label>Product name</label>
+                <input type="text" name="title" value="<%= item.title %>">
+            </div>
+            <div class="field" style="display: none;">
+                <label>Image</label>
+                <input type="text" name="image" value="<%= item.image %>">
+            </div>
+            <div class="field">
+                <label>Cost in rupees</label>
+                <input type="text" name="cost" value="<%=item.cost%>" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))" />
+            </div>
+            <div class="field">
+                <label>Shop Name</label>
+                <input type="text" name="item[shop]" value="<%= item.shop %>">
+            </div>
+
+            <input class="ui violet big basic button" type="submit">
+        </form>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
-</html>
 
+</html>
